Fix T49078: Cycles tries to render volume from another render layer when camera is in volume